Closed Bug 77422 Opened 23 years ago Closed 23 years ago

crash while replying to my.yahoo.com

Categories

(MailNews Core :: Composition, defect, P1)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.1

People

(Reporter: scottputterman, Assigned: bugzilla)

Details

(Whiteboard: [nsbeta1+])

Attachments

(1 file)

Using 2001042404.  I sent my my.yahoo.com page to myself.  I replied to it. When
I sent it the compose window disappeared and I got the following error:

"An error occurred while sending mail.  The mail server responded:  Data line
too long (Max 16384) Please check the message again."

I hit the ok button to dismiss the dialog.

the compose window popped up and immediately crashed.

I have to send my my.yahoo.com page (the default non-signed in one doesn't
crash).  I'll attach the .eml of the message I replied to.

Here's the stack:

nsMsgAsyncWriteProtocol::UnblockPostReader
[d:\builds\seamonkey\mozilla\mailnews\base\util\nsMsgProtocol.cpp, line 997]
nsMsgProtocolStreamProvider::OnDataWritable
[d:\builds\seamonkey\mozilla\mailnews\base\util\nsMsgProtocol.cpp, line 724]
nsOnDataWritableEvent::HandleEvent
[d:\builds\seamonkey\mozilla\netwerk\base\src\nsStreamProviderProxy.cpp, line 143]
PL_HandleEvent [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 589]
PL_ProcessPendingEvents [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c,
line 522]
_md_EventReceiverProc [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line
1070]
I am able to reproduce the exact same behaviour using my debug build of today (
with the send fail patch in it!)
JF I will be looking at this for now - when you are done with the other mime
crash and send - let me know.
Attached file message that crashes
marking nsbeta1+
Keywords: nsbeta1
Priority: -- → P1
Whiteboard: [nsbeta1+]
Target Milestone: --- → mozilla0.9.1
I am able to reproduce this bug using another page created that was sent to me. 
(note to myself: Bindu's msg from 4-24-2001)
Status: NEW → ASSIGNED
using the message putterman posted, I am able to reproduce the crash.
The main body part of the message which contains only HTML doesn't contains any 
line breaks. I don't know yet if it's an editor problem or a mime one. ALl I can 
say is that is not SMTP job to break lines to a acceptable length.
does somebody know if it's a recent regression?
I only found this because I was testing another bug about replying to messages
with web pages in them, so I don't know how long this has been going on.
The proplem in this case come from the fact that the document serializer doesn't 
break HTML table by default. As in this page we have hudge table, we get lines 
longer that 16K! The easy fix is to set the flag outputFormatted (like we do 
already for plain text) which will cause the converter to return a nice 
formatted HTML page. The content of the HTML still the same only change is 
insertion of linebreak which doesn't have any meaning in HTML world. The side 
back of this is that we will send a little bit more bytes than before!
Whiteboard: [nsbeta1+] → [nsbeta1+] Have fix
proposed fix:

Index: nsMsgSend.cpp
===================================================================
RCS file: /cvsroot/mozilla/mailnews/compose/src/nsMsgSend.cpp,v
retrieving revision 1.230
diff -w -u -2 -r1.230 nsMsgSend.cpp
--- nsMsgSend.cpp       2001/05/01 03:17:44     1.230
+++ nsMsgSend.cpp       2001/05/03 00:25:39
@@ -74,4 +74,5 @@
 #include "nsISmtpUrl.h"
 #include "nsIInterfaceRequestor.h"
+#include "nsIDocumentEncoder.h"    // for editor output flags


@@ -1264,5 +1265,5 @@
   //
   nsString  format; format.AssignWithConversion(TEXT_HTML);
-  PRUint32  flags = 0;
+  PRUint32  flags = nsIDocumentEncoder::OutputFormatted;
   PRUnichar *bodyText = nsnull;
   nsresult rv;
R=varada
sr=mscott
Fixed and checked in
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
I still crash replying to MY Yahoo page after I do a Send page and retrieve it.
Using build 2001-05-04 on windows, build 2001-05-04 on mac and linux doesn't 
have a build that I can use after time of fix checkin.  I sent a Talkback but I 
can't get it, problem with Talkback at this time.  I'm not sure if it's crashing 
at the same place, will reopen until I can test again on Monday.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Esther, can you send me your yahoo page by mail, do a send page?
Status: REOPENED → ASSIGNED
Whiteboard: [nsbeta1+] Have fix → [nsbeta1+]
I did some test today with Esther's my yahoo page and evrything is fine, same
for Esther. Close it again as fixed.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago23 years ago
Resolution: --- → FIXED
verified.  
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: