Fix for bug 77422. Use formatted output to avoid hudge lines. R=varada, SR=mscott